# YinXi-AI

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  main.py  newbot2.py  pyproject.toml  requirements.txt  setting.json.example  think.md  think2.md  tree.md
assests/: DONE.md  Discord-Bot-YinXi_wiki_20250613.md  TODO.md
cmds/: AITwo.py  ai_channel_two.py  ai_three.py  apiCog.py  bot_info_help.py  channel_history.py  counting.py  daily_rags.py  error.py  events_recording.py  giveaway.py  hugging.py  instagram_fetcher.py  join_leave_guild.py  keep.py  load.py  main.py  play4.py  qrcode.py  skyblock_events.py  skyblock_item_tracker.py  skyblock_main.py  skyblock_mayor.py  sub_yt.py  suggest_report.py  system_prompt.py  testtemp.py  tic_tac_toe.py  tools_test.py  total_stats.py  translator.py  vector_data.py  vector_test.py  world_chat.py  yinxi.py
cmds/AIsTwo/: base_chat.py  info.py  tool_map.py  utils.py
cmds/AIsTwo/data/: tools_descrip.json
cmds/AIsTwo/human/: base.py
cmds/AIsTwo/others/: decide.py  embedding.py  func.py  if_tools_needed.py
cmds/AIsTwo/tools/: sql_create.py  tool_funcs.py
cmds/ai_chat/chat/: chat.py  (+3 more)
cmds/daily_rag/: main.py
cmds/skyblock_commands_foldor/: skyblock_commands.py  skyblock_events.py  test.json  test.py  tmp.txt
cmds/useless/: 20250809 me.py  AIChannel.py  levels.py  recording.py  twitter_notification.py
core/: classes.py  functions.py  mock_interaction.py  mongodb_clients.py  qdrant.py  setup_log.py  sqlite.py  translator.py
core/chat_human/: manage_browser.py  prompt.py
core/locales/: en-US.json  help_doc.md  prompt1.md  prompt1_chat_history.md  prompt2.md  prompt2_chat_history.md  prompt3.md  prompt3_chat_history.md  zh-CN.json  zh-TW.json
data/mongodb/: backup.sh
(+113 files in other folders)
