[project]
name = "yinxi-discord-bot-ai"
version = "0.1.1"
requires-python = ">=3.13"

dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.11.18",
    "aiosqlite==0.21.0",
    "beautifulsoup4==4.13.4",
    "chromadb>=1.0.8",
    "crawl4ai>=0.7.3",
    "deep_translator==1.11.4",
    "discord-py>=2.5.2",
    "fake_useragent==2.1.0",
    "huggingface_hub==0.30.2",
    "jinja2==3.1.6",
    "motor>=3.7.1",
    "ollama>=0.5.3",
    "openai>=1.99.6",
    "orjson==3.10.18",
    "parsedatetime==2.6",
    "Pillow==11.2.1",
    "playwright>=1.54.0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "qdrant-client>=1.15.1",
    "redis[hiredis]>=6.4.0",
    "Requests==2.32.3",
    "tenacity==9.0.0",
    "zai-sdk>=0.0.2",
]
